# evolution-of-todo

./: mcp-master-config.md  package-lock.json
.claude/: settings.local.json
.claude/skills/ai-agent-engineering/: skill.md
.claude/skills/cloud-native-events/: skill.md
.claude/skills/container-ops/: skill.md
.claude/skills/database-management/: skill.md
.claude/skills/debugging/: skill.md
.claude/skills/full-stack-dev/: skill.md
.claude/skills/git-version-control/: skill.md
.claude/skills/mcp-server-dev/: skill.md
.claude/skills/project-management/: skill.md
.claude/skills/python-uv-ops/: skill.md
.claude/skills/security-ops/: skill.md
history/adr/: 001-enhanced-task-model-enum-types-api-features.md
phase-1/: data-model.md  plan.md  pyproject.toml  quickstart.md  research.md  tasks.md
phase-1/checklists/: requirements.md
phase-1/contracts/: api-contracts.md
phase-1/specs/: 001_console_mvp.md
phase-1/src/: main.py  manager.py  models.py
phase-1/tests/: conftest.py  test_cli.py  test_manager.py  test_models.py
phase-2/: .gitignore  README.md  docker-compose.yml  plan.md  tasks.md  vercel.json
phase-2/backend/: alembic.ini  auth.py  check_schema.py  db.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  test_auth_local.py
phase-2/backend/alembic/: env.py
phase-2/backend/alembic/versions/: 41a4c950f6af_initial_migration_task_table.py
phase-2/backend/routes/: tasks.py
phase-2/checklists/: requirements.md
phase-2/frontend/: next.config.ts  package-lock.json  package.json
phase-2/specs/: overview.md
(+73 files in other folders)
