[project]
name = "console-todo-app"
version = "0.1.0"
description = "A console-based todo application for Phase I of the Evolution of Todo project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
